css/mobile.css
.section {
    /* width: 100%; */
}

header, footer {
    background-color: var(--valhalla);
    color: var(--white);
}

.container {
    /*  */
}

button,
.send-message-button {
    font-family: "Roboto", sans-serif;
    font-weight: 400;
    font-size: 1rem;
    background-color: var(--grey);
}

/* === HEADER === */

.header-container {
    height: 500px;
    margin: 0 1rem;
    padding-top: 10px;
}

.logo-and-navbar {
    display: flex;
    justify-content: space-between;
}

.header-logo,
.footer-logo {
    font-family: "Roboto", sans-serif;
    font-weight: 700;
    font-size: 2.25rem;
}

.logo-desktop {
    color: var(--grey);
}

.logo-common {
    color: var(--gold);
}

.logo-desktop-header {
    display: none;
}

.fa-bars {
    font-size: 2.25rem;
    color: var(--white);
}

.header-menu {
    position: absolute;
    background-color: var(--valhalla);
    width: 100%;
    top: 5.625rem;
    z-index: 1;
}

.header-menu li {
    font-family: "Roboto", sans-serif;
    font-weight: 700;
    font-size: 1rem;
    height: 3rem;
}

.menu-opened {
    color: var(--gold);
}

.selected-link {
    color: var(--grey);
}

h1 {
    font-family: "League Gothic", sans-serif;
    font-weight: 400;
    font-size: 6rem;
    line-height: 6rem;
    text-align: center;
    margin: 3.5rem auto 0 auto;
    max-width: 360px;
}

.h1-description {
    font-family: "League Spartan", sans-serif;
    font-weight: 400;
    font-size: 2rem;
    line-height: 1.84rem;
    text-align: center;
    letter-spacing: 0.8rem;
    margin-top: 2rem;
}

/* === MAIN === */

main {
    color: var(--valhalla);
}

main h2 {
    font-family: "League Spartan", sans-serif;
    font-weight: 700;
    font-size: 2rem;
}

.about-me p,
article p {
    font-family: "Roboto", sans-serif;
    font-weight: 400;
    font-size: 1rem;
    line-height: 1.171875rem;
}

/* --- home --- */

.main-photo {
    /* for testing */
    height: 100px;
    width: 200px;
    background-size: contain;
    background-repeat: no-repeat;
}

.skill-description {
    font-family: "Roboto", sans-serif;
    font-weight: 400;
    font-size: 1rem;
    line-height: 1.171875rem;
}

.skill-description p {
    color: var(--grey);
}


.indicator {
    display: flex;
    flex-direction: row;
    gap: 0.75rem;
}

.indicator-dot {
    width: 0.75rem;
    height: 0.75rem;
    border: 1px solid var(--valhalla);
    border-radius: 50%;
}

.indicator-dot-filled {
    background-color: var(--valhalla);
}

.project-card {
    width: 300px;
    height: 160px;
    background-image: url(./../img/project-bg.jpeg);
    font-family: "Roboto", sans-serif;

    color: var(--white);
}

.project-card h3 {
    font-weight: 700;
    font-size: 1.25rem;
}

.project-card ul {
    list-style: inside;
}

.project-card li {
    font-weight: 400;
}

/* --- message --- */

.message-container {
    font-family: "League Spartan", sans-serif;
    font-weight: 700;
    font-size: 1rem;
    line-height: 0.92rem;
}

/* === FOOTER === */

.footer-container {
    height: 232px;
    font-family: "Roboto", sans-serif;
    font-weight: 700;
    font-size: 1rem;
}


.copyright {
    font-size: 1.6875rem;
}

